--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install -Dmaven.test.skip=True
 
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
